新增SaasTCP设备解决方案工具类和相关接口
- 新增SaasTCPDeviceSolutionUtil类，用于处理SaasTCP协议的设备注册和查询
- 新增SaasTCPDeviceSolutionService接口，用于通过Retrofit调用SaasTCP相关API
- 在Batch实体类中添加SAAS_TCP_ELECTRIC_SWAP_CABINET常量，表示SaasTCP换电柜类型
- 修改BatchServiceImpl和ProductNewServiceImpl，集成新的设备解决方案工具类
- 更新应用配置文件，添加SaasTCP密钥配置